[package]
name = "graphew"
authors = ["Qirui Wang"]
description = "A universal state space visualizer."
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "default_fonts",
    "glow",
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
egui_graphs = "0.7.3"
petgraph = "0.6.3"
fdg-sim = "0.9.1"
rand = "0.8.5"
crossbeam = "0.8.2"
rfd = "0.11.4"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
